# -1579

./: README.md
talklab_messenger_final/talklab_messenger_final/: .gitignore  CMakeLists.txt  README.md  install_deps_ubuntu.sh
talklab_messenger_final/talklab_messenger_final/desktop/: main.js  package.json
talklab_messenger_final/talklab_messenger_final/docs/: PROJECT_REPORT.md  TEST_LOG.md
talklab_messenger_final/talklab_messenger_final/server/src/: database.cpp  database.h  main.cpp  security.cpp  security.h
talklab_messenger_final/talklab_messenger_final/web/: app.js  index.html  manifest.json  style.css  sw.js
